tests/compile_fail/fmt/signal_not_impl_display.rs
use sigmut::{core::Runtime, signal_format, Signal};

fn main() {
    let mut rt = Runtime::new();
    struct NoDisplay;
    let s = Signal::from_value(NoDisplay);
    let _s = signal_format!("{}", s);
}
